added readme info

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- navbar -->
-    <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-black" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="index.html">
                 <img src="assets/hnm-logo.png" width="112" height="112">
@@ -32,16 +32,12 @@
                 <a class="navbar-item" href="index.html">
                     Home
                 </a>
-
                 <a class="navbar-item" href="portfolio.html">
                     Portfolio
                 </a>
-
-                <a class="navbar-item" href="portfolio.html">
+                <a class="navbar-item" href="resume.html">
                     Resume
                 </a>
-
-
             </div>
 
             <div class="navbar-end">
@@ -55,29 +51,21 @@
 
     <!--About Me Card-->
     <div class="columns is-centered">
-        <div class="column is-half">
+        <div class="column is-two-thirds">
             <div class="card">
-                <div class="columns">
-                    <div class="column is-one-half">
-                        <div class="card-image">
-                            <figure class="image">
-                                <img src="assets/Profilepic-thumbnail.jpg" alt="Thumbnail of Haley">
-                            </figure>
-                        </div>
-                    </div>
-                    <div class="column is-one-half">
-                        <div class="card-content">
-                            <p><span style="font-size:2.5rem">Haley Myers</span></p>
-                            <p>
-                                <i class="fa fa-envelope-square "></i>
-                                Email Me</p>
-                            <a style="color:black" href="mailto:haleynmyers@gmail.com">haleynmyers@gmail.com</a>
-                            </p>
-                        </div>
-                    </div>
+                <div class="card-image">
+                    <figure class="is-4by3">
+                        <img src="assets/Profilepic-thumbnail.jpg" alt="Thumbnail of Haley">
+
+                    </figure>
+                </div>
+
+                <div class="card-content">
+                    <p><span style="font-size:2.5rem">Haley Myers</span></p>
+                    <p>
                 </div>
                 <div class="content">
-                    <p>Born in Jackson, MS, and raised in an artisitic and crafty family. I've been in Nashville
+                    <p>Born in Jackson, MS, and raised in an artisitic and  crafty family. I've been in Nashville
                         for almost a decade and love the community here. After staying home with my son for a few
                         years, I was itching to challenge myself creatively and intellectually. Coding is something
                         that really stretches me to constantly be learning and trying new things. I hope to take my
@@ -99,8 +87,11 @@
 
                     </p>
                     <p class="card-footer-item">
-                        <a href="https://www.linkedin.com/in/haley-myers-56a4a3b5/"><i class="fa fa-linkedin"></i> : haleynmyers</a>
-
+                        <a href="https://www.linkedin.com/in/haley-myers-56a4a3b5/"><i class="fa fa-linkedin"></i> :
+                            haleynmyers</a>
+                    </p>
+                    <p class="card-footer-item">
+                        <a href="mailto:haleynmyers@gmail.com"><i class="fa fa-envelope">Email me</i></a>
                     </p>
                 </footer>
 
