--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 
     <body>
         <!-- navbar -->
-        <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+        <nav class="navbar is-black" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="index.html">
                     <img src="assets/hnm-logo.png" width="112" height="112">
@@ -50,7 +50,7 @@
                         Portfolio
                     </a>
 
-                    <a class="navbar-item" href="portfolio.html">
+                    <a class="navbar-item" href="resume.html">
                         Resume
                     </a>
 
@@ -68,7 +68,7 @@
         <!--portfolio Grid of cards-->
         <section class="wrapper">
             <div class="level">
-                <div class="columns">
+                <div class="columns is-centered">
                     <!--Card 1-->
                     <div class="column is-half">
                         <div class="card">
@@ -105,7 +105,7 @@
                             </footer>
                         </div>
                     </div>
-                    <!-- Card 2 -->
+
                     <div class="column is-half">
                         <div class="card">
                             <div class="box is-4by3">
@@ -173,22 +173,23 @@
                             <div class="box">
                                 <div class="card-image">
                                     <figure class="image is-4by3">
-                                        <img src="#" alt="#">
+                                        <img src="assets/dailyScheduler.gif" alt="Dail Sceduler with time slots to input activities">
                                     </figure>
                                 </div>
                             </div>
                             <div class="card-content">
-                                <p><span>Project Name</span></p>
-                                <h6>tagline</h6>
+                                <p><span>Daily Scheduler</span></p>
+                                <h6>Each day can be great!</h6>
                                 <div class="content">
+                                    Stay organized each day by inputting events to the time slots
                                 </div>
                             </div>
                             <footer class="card-footer">
                                 <p class="card-footer-item">
-                                    <a href="https://github.com/haleynmyers"><i class="fa fa-github"></i>Repository</a>
+                                    <a href="https://github.com/haleynmyers/daily-scheduler://github.com/haleynmyers"><i class="fa fa-github"></i>Repository</a>
                                 </p>
                                 <p class="card-footer-item">
-                                    <a href="https://github.com/haleynmyers"><i
+                                    <a href="https://haleynmyers.github.io/daily-scheduler/"><i
                                             class="fa fa-external-link-square-al"></i>Website</a>
                                 </p>
                             </footer>
