--- a/resume.html
+++ b/resume.html
@@ -53,16 +53,12 @@
                     <a class="navbar-item" href="index.html">
                         Home
                     </a>
-
                     <a class="navbar-item" href="portfolio.html">
                         Portfolio
                     </a>
-
-                    <a class="navbar-item" href="portfolio.html">
+                    <a class="navbar-item" href="resume.html">
                         Resume
                     </a>
-
-
                 </div>
 
                 <div class="navbar-end">
@@ -72,33 +68,6 @@
                 </div>
             </div>
         </nav>
-
-<!-- 
-        <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
-            <div class="navbar-brand">
-
-                <a class="navbar-item" href="index.html">
-                    <img class="hnm-logo" src="assets/hnm-logo.png" alt="hnm logo - Back to home page">
-                </a>
-
-                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                </a>
-                <div class="navbar-menu" id="navMenu">
-                    <div class="navbar-item">
-                        <a style="color:white" href="portfolio.html">Portfolio</a>
-                    </div>
-                    <div class="navbar-item">
-                        <a style="color:white" href="resume.html">Resume</a>
-                    </div>
-
-                </div>
-
-            </div>
-        </nav> -->
-
         <!--Resume Card-->
         <div class="columns is-centered">
             <div class="column is-two-thirds">
@@ -106,10 +75,11 @@
                     <div class="card-header">
                         <span>Resume</span>
                     </div>
-                    <div class="card-content">
+                    <div class="card-body">
+                        <div class="column">
                         <embed src="assets/HaleyMyers_Developer.pdf" width="400" height="600" type="application/pdf">
                     </div>
-
+                </div>
 
                     <footer class="card-footer">
                         <p class="card-footer-item">
@@ -119,15 +89,12 @@
                         <p class="card-footer-item">
                             <a href="https://www.linkedin.com/in/haley-myers-56a4a3b5/"><i
                                     class="fa fa-linkedin"></i></a>
-
                         </p>
                         <p class="card-footer-item">
-                            <a href="mailto:haleynmyers@gmail.com"><i class="fa fa-envelope"></i></a>
-
+                            <a href="mailto:haleynmyers@gmail.com"><i class="fa fa-envelope"></i>Email Me</a>
                         </p>
                     </footer>
                 </div>
-
             </div>
         </div>
 
