--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar is-black" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item" href="index.html">
-                <img src="assets/hnm-logo.png" width="112" height="112">
+                <img src="assets/img/initials.png" width="112" height="85">
             </a>
 
             <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
@@ -55,7 +55,7 @@
             <div class="card">
                 <div class="card-image">
                     <figure class="is-4by3">
-                        <img src="assets/Profilepic-thumbnail.jpg" alt="Thumbnail of Haley">
+                        <img src="assets/img/Profilepic-thumbnail.jpg" alt="Thumbnail of Haley">
 
                     </figure>
                 </div>
@@ -91,7 +91,7 @@
                             haleynmyers</a>
                     </p>
                     <p class="card-footer-item">
-                        <a href="mailto:haleynmyers@gmail.com"><i class="fa fa-envelope">Email me</i></a>
+                        <a href="mailto:haleynmyers@gmail.com"><i class="fa fa-envelope"></i> Email me</a>
                     </p>
                 </footer>
 
