--- a/resume.html
+++ b/resume.html
@@ -19,84 +19,70 @@
 </head>
 
 <body>
-    <!DOCTYPE html>
-    <html lang="en">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-        <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="assets/style.css" />
-        <title>hnm || Haley Myers Home </title>
-    </head>
-
-    <body>
         <!-- navbar -->
-        <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
-            <div class="navbar-brand">
-                <a class="navbar-item" href="index.html">
-                    <img src="assets/hnm-logo.png" width="112" height="112">
-                </a>
+    <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+        <a class="navbar-item" href="index.html">
+            <img src="assets/img/initials.png" width="112" height="112">
+        </a>
 
-                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-                    data-target="navbarBasicExample">
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                </a>
-            </div>
+        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+            data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
+    </div>
 
-            <div id="navbarBasicExample" class="navbar-menu">
-                <div class="navbar-start">
-                    <a class="navbar-item" href="index.html">
-                        Home
-                    </a>
-                    <a class="navbar-item" href="portfolio.html">
-                        Portfolio
-                    </a>
-                    <a class="navbar-item" href="resume.html">
-                        Resume
-                    </a>
-                </div>
+    <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+            <a class="navbar-item" href="index.html">
+                Home
+            </a>
+            <a class="navbar-item" href="portfolio.html">
+                Portfolio
+            </a>
+            <a class="navbar-item" href="resume.html">
+                Resume
+            </a>
+        </div>
 
-                <div class="navbar-end">
-                    <div class="navbar-item">
+        <div class="navbar-end">
+            <div class="navbar-item">
 
-                    </div>
-                </div>
-            </div>
-        </nav>
-        <!--Resume Card-->
-        <div class="columns is-centered">
-            <div class="column is-two-thirds">
-                <div class="card">
-                    <div class="card-header">
-                        <span>Resume</span>
-                    </div>
-                    <div class="card-body">
-                        <div class="column">
-                        <embed src="assets/HaleyMyers_Developer.pdf" width="400" height="600" type="application/pdf">
-                    </div>
-                </div>
-
-                    <footer class="card-footer">
-                        <p class="card-footer-item">
-                            <a href="https://github.com/haleynmyers"><i class="fa fa-github"></i></a>
-
-                        </p>
-                        <p class="card-footer-item">
-                            <a href="https://www.linkedin.com/in/haley-myers-56a4a3b5/"><i
-                                    class="fa fa-linkedin"></i></a>
-                        </p>
-                        <p class="card-footer-item">
-                            <a href="mailto:haleynmyers@gmail.com"><i class="fa fa-envelope"></i>Email Me</a>
-                        </p>
-                    </footer>
-                </div>
             </div>
         </div>
+    </div>
+</nav>
+<!--Resume Card-->
+<div class="columns is-centered">
+    <div class="column is-two-thirds">
+        <div class="card is-centered">
+            <div class="card-header text-centered">
+                <span>Resume</span>
+            </div>
+            <div class="card-body">
+                <div class="column">
+                <embed src="assets/Myers-full-stack-dev.pdf" width="100%" height="600" type="application/pdf">
+            </div>
+        </div>
+
+            <footer class="card-footer">
+                <p class="card-footer-item">
+                    <a href="https://github.com/haleynmyers" target="_blank"><i class="fa fa-github"></i>  GitHub</a>
+
+                </p>
+                <p class="card-footer-item">
+                    <a href="https://www.linkedin.com/in/haley-myers-56a4a3b5/" target="_blank"><i
+                            class="fa fa-linkedin"></i>  LinkedIn</a>
+                </p>
+                <p class="card-footer-item">
+                    <a href="mailto:haleynmyers@gmail.com" target="_blank"><i class="fa fa-envelope"></i>  Email Me</a>
+                </p>
+            </footer>
+        </div>
+    </div>
+</div>
 
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="script.js"></script>
