Adjusted portfolio columns

--- a/resume.html
+++ b/resume.html
@@ -57,13 +57,13 @@
 <!--Resume Card-->
 <div class="columns is-centered">
     <div class="column is-two-thirds">
-        <div class="card is-centered">
-            <div class="card-header text-centered">
-                <span>Resume</span>
+        <div class="card">
+            <div class="card-header">
+               <h2><span>Resume</span></h2> 
             </div>
             <div class="card-body">
-                <div class="column">
-                <embed src="assets/Myers-full-stack-dev.pdf" width="100%" height="600" type="application/pdf">
+                <div class="box">
+                <embed src="assets/Myers-full-stack-dev.pdf" height=500px width=100% type="application/pdf">
             </div>
         </div>
 
