--- a/portfolio.html
+++ b/portfolio.html
@@ -14,232 +14,217 @@
     <link rel="stylesheet" href="assets/style.css" />
     <title>hnm || Portfolio</title>
   </head>
+  <body>
+    <!-- navbar -->
+    <nav class="navbar is-black" role="navigation" aria-label="main navigation" >
+      <div class="navbar-brand">
+        <a class="navbar-item" href="index.html">
+          <img src="assets/img/initials.png" width="112" height="112" />
+        </a>
 
-      <body>
-        <!-- navbar -->
-        <nav
-          class="navbar is-black"
-          role="navigation"
-          aria-label="main navigation"
+        <a
+          role="button"
+          class="navbar-burger burger"
+          aria-label="menu"
+          aria-expanded="false"
+          data-target="navbarBasicExample"
         >
-          <div class="navbar-brand">
-            <a class="navbar-item" href="index.html">
-              <img src="assets/img/initials.png" width="112" height="112" />
-            </a>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </a>
+      </div>
 
-            <a
-              role="button"
-              class="navbar-burger burger"
-              aria-label="menu"
-              aria-expanded="false"
-              data-target="navbarBasicExample"
-            >
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-            </a>
-          </div>
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+          <a class="navbar-item" href="index.html"> Home </a>
 
-          <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
-              <a class="navbar-item" href="index.html"> Home </a>
+          <a class="navbar-item" href="portfolio.html"> Portfolio </a>
 
-              <a class="navbar-item" href="portfolio.html"> Portfolio </a>
+          <a class="navbar-item" href="resume.html"> Resume </a>
+        </div>
 
-              <a class="navbar-item" href="resume.html"> Resume </a>
-            </div>
+        <div class="navbar-end">
+          <div class="navbar-item"></div>
+        </div>
+      </div>
+    </nav>
 
-            <div class="navbar-end">
-              <div class="navbar-item"></div>
-            </div>
-          </div>
-        </nav>
-
-        <!--portfolio Grid of cards-->
-        <section class="wrapper">
-          <div class="level">
-            <div class="columns is-centered">
-              <!--Card 1-->
-              <div class="column is-half">
-                <div class="card">
-                  <div class="box is-3by4" style="background-color: black">
-                    <div class="card-image">
-                      <figure class="image">
-                        <img
-                          src="assets/img/dybs-demo2.gif"
-                          alt="Diversify Your Bookshelf demo of searching and saving book titles"
-                        />
-                      </figure>
-                    </div>
-                  </div>
-
-                  <div class="card-content">
-                    <p><span>DYBS || Diversify Your BookShelf</span></p>
-                    <h6>
-                      A children's book search engine that promotes diversity.
-                    </h6>
-                    <div class="content">
-                      <p>
-                        This streamlined website is a search engine specifically
-                        targeting children's literature that features and
-                        promotes diversity. The idea came from personal
-                        experiece as a mother. I intentionally look for books at
-                        the library that have a strong message of celebrating
-                        our differences and feature marginalized communities.
-                      </p>
-                    </div>
-                  </div>
-                  <footer class="card-footer">
-                    <p class="card-footer-item">
-                      <a href="https://github.com/haleynmyers/dybs" target="_blank"
-                        ><i class="fa fa-github"></i> Repository</a
-                      >
-                    </p>
-                    <p class="card-footer-item">
-                      <a href="https://haleynmyers.github.io/dybs/" target="_blank"
-                        ><i class="fa fa-external-link" aria-hidden="true"></i>
-                        Website</a>
-                    </p>
-                  </footer>
-                </div>
-              </div>
-              <!-- card 2 -->
-              <div class="column is-half">
-                <div class="card">
-                  <div class="box">
-                    <div class="card-image">
-                      <figure class="image is-4by3">
-                        <img
-                          src="assets/img/change-for-good.gif"
-                          alt="Demo of Change for Good website"
-                        />
-                      </figure>
-                    </div>
-                  </div>
-                  <div class="card-content">
-                    <p><span>Change for Good</span></p>
-                    <h6>
-                      Connecting involved community members with events they can
-                      serve in
-                    </h6>
-                    <div class="content">
-                      Together with a group of 3 other developers, we made this
-                      app to connect community members to all the ways they can
-                      volunteer or otherwise participate in community events.
-                      <br />
-                      Change for Good displays a feed of all local events that
-                      the user can browse and then save into their own Saved
-                      Events feed. It displays the organization who made the
-                      event, title, description, and date.
-                    </div>
-                  </div>
-                  <footer class="card-footer">
-                    <p class="card-footer-item">
-                      <a href="https://github.com/ericlafontsee/Change-For-Good" target="_blank"
-                        ><i class="fa fa-github"></i> Repository</a >
-                    </p>
-                    <p class="card-footer-item">
-                      <a href="https://arcane-ravine-47168.herokuapp.com/" target="_blank"
-                        ><i class="fa fa-external-link" aria-hidden="true"></i>
-                        Website</a>
-                    </p>
-                  </footer>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="level">
-            <div class="columns is-centered">
-              <!-- card 3 -->
-              <div class="column is-half">
-                <div class="card">
-                  <div class="box is-4by3">
-                    <div class="card-image">
-                      <figure class="image">
-                        <img
-                          src="https://raw.githubusercontent.com/haleynmyers/coding-is-outta-this-world-quiz/master/assets/codeQuizDemo.gif"
-                          alt="Gif of a galaxy themed online quize"
-                        />
-                      </figure>
-                    </div>
-                  </div>
-                  <div class="card-content">
-                    <p><span>Coding is Outta This World</span></p>
-                    <h6>A quick quiz about coding</h6>
-                    <div class="content">
-                      <p>
-                        This website tests your knowledge of JavaScript in a
-                        race against the clock. If you answer incorrectly, five
-                        seconds is deducted from the clock. If you complete all
-                        the questions before the timer runs out, the number of
-                        seconds left will be added to your score. See if you can
-                        get a perfect score on the highscores page.
-                      </p>
-                    </div>
-                  </div>
-                  <footer class="card-footer">
-                    <p class="card-footer-item">
-                      <a
-                        href="https://github.com/haleynmyers/coding-is-outta-this-world-quiz" target="_blank"
-                        ><i class="fa fa-github"></i> Repository</a
-                      >
-                    </p>
-                    <p class="card-footer-item">
-                      <a
-                        href="https://haleynmyers.github.io/coding-is-outta-this-world-quiz/" target="_blank"
-                        ><i class="fa fa-external-link" aria-hidden="true"></i>
-                        Website</a
-                      >
-                    </p>
-                  </footer>
-                </div>
+      <!--portfolio Grid of cards-->
+    <section class="wrapper">
+      <div class="level">
+        <div class="columns is-centered">
+          <!--Card 1-->
+          <div class="column is-half">
+            <div class="card">
+              <div class="box">
+                  <figure class="image">
+                    <img
+                      src="assets/img/dybs-demo2.gif"
+                      alt="Diversify Your Bookshelf demo of searching and saving book titles"
+                    />
+                  </figure>
               </div>
 
-              <!--Card 4-->
-              <div class="column is-half">
-                <div class="card">
-                  <div class="box">
-                    <div class="card-image">
-                      <figure class="image is-4by3">
-                        <img
-                          src="https://github.com/haleynmyers/weather-dashboard/blob/master/assets/weather-dash-demo.gif"
-                          alt="Weather Dashboard page showing the current weather conditions and a five day forecast"
-                        />
-                      </figure>
-                    </div>
-                  </div>
-                  <div class="card-content">
-                    <p><span>Weather Dashboard</span></p>
-                    <h6>
-                      A quick glance at the current weather and five day
-                      forecast of a desired location.
-                    </h6>
-                    <div class="content"></div>
-                  </div>
-                  <footer class="card-footer">
-                    <p class="card-footer-item">
-                      <a href="https://github.com/haleynmyers" target="_blank"
-                        ><i class="fa fa-github"></i> Repository</a
-                      >
-                    </p>
-                    <p class="card-footer-item">
-                      <a href="https://github.com/haleynmyers" target="_blank"
-                        ><i class="fa fa-external-link" aria-hidden="true"></i>
-                        Website</a
-                      >
-                    </p>
-                  </footer>
+              <div class="card-content">
+                <p><span>DYBS || Diversify Your BookShelf</span></p>
+                <h6>
+                  A children's book search engine that promotes diversity.
+                </h6>
+                <div class="content is-flex-mobile">
+                  <p>
+                    This streamlined website is a search engine specifically
+                    targeting children's literature that features and
+                    promotes diversity. The idea came from personal
+                    experiece as a mother. I intentionally look for books at
+                    the library that have a strong message of celebrating
+                    our differences and feature marginalized communities.
+                  </p>
                 </div>
               </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <a href="https://github.com/haleynmyers/dybs" target="_blank"
+                    ><i class="fa fa-github"></i> Repository</a
+                  >
+                </p>
+                <p class="card-footer-item">
+                  <a href="https://haleynmyers.github.io/dybs/" target="_blank"
+                    ><i class="fa fa-external-link" aria-hidden="true"></i>
+                    Website</a>
+                </p>
+              </footer>
             </div>
           </div>
-    
-        </section>
+          <!-- card 2 -->
+          <div class="column is-half">
+            <div class="card">
+              <div class="box">
+                  <figure class="image">
+                    <img
+                      src="assets/img/change-for-good.gif"
+                      alt="Demo of Change for Good website"
+                    />
+                  </figure>
+                </div>
+              <div class="card-content">
+                <p><span>Change for Good</span></p>
+                <h6>
+                  Connecting involved community members with events they can
+                  serve in
+                </h6>
+                <div class="content is-flex-mobile">
+                  Together with a group of 3 other developers, we made this
+                  app to connect community members to all the ways they can
+                  volunteer or otherwise participate in community events.
+                  <br />
+                  Change for Good displays a feed of all local events that
+                  the user can browse and then save into their own Saved
+                  Events feed. It displays the organization who made the
+                  event, title, description, and date.
+                </div>
+              </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <a href="https://github.com/ericlafontsee/Change-For-Good" target="_blank"
+                    ><i class="fa fa-github"></i> Repository</a >
+                </p>
+                <p class="card-footer-item">
+                  <a href="https://arcane-ravine-47168.herokuapp.com/" target="_blank"
+                    ><i class="fa fa-external-link" aria-hidden="true"></i>
+                    Website</a>
+                </p>
+              </footer>
+            </div>
+          </div>
+        </div>
+      </div>
 
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="script.js"></script>
-      </body>
-    </html>
+      <div class="level">
+        <div class="columns">
+          <!-- card 3 -->
+          <div class="column is-half">
+            <div class="card">
+              <div class="box">
+                  <figure class="image">
+                    <img
+                      src="https://raw.githubusercontent.com/haleynmyers/coding-is-outta-this-world-quiz/master/assets/codeQuizDemo.gif"
+                      alt="Gif of a galaxy themed online quize"
+                    />
+                  </figure>
+              </div>
+              <div class="card-content">
+                <p><span>Coding is Outta This World</span></p>
+                <h6>A quick quiz about coding</h6>
+                <div class="content is-flex-mobile">
+                  <p>
+                    This website tests your knowledge of JavaScript in a
+                    race against the clock. If you answer incorrectly, five
+                    seconds is deducted from the clock. If you complete all
+                    the questions before the timer runs out, the number of
+                    seconds left will be added to your score. See if you can
+                    get a perfect score on the highscores page.
+                  </p>
+                </div>
+              </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <a
+                    href="https://github.com/haleynmyers/coding-is-outta-this-world-quiz" target="_blank"
+                    ><i class="fa fa-github"></i> Repository</a
+                  >
+                </p>
+                <p class="card-footer-item">
+                  <a
+                    href="https://haleynmyers.github.io/coding-is-outta-this-world-quiz/" target="_blank"
+                    ><i class="fa fa-external-link" aria-hidden="true"></i>
+                    Website</a
+                  >
+                </p>
+              </footer>
+            </div>
+          </div>
+
+          <!--Card 4-->
+          <div class="column is-half">
+            <div class="card">
+              <div class="box">
+                  <figure class="image">
+                    <img src="assets/img/weather-dash-demo.gif"
+                    alt="Weather Dashboard page showing the current weather conditions and a five day forecast"
+                    />
+                  </figure>
+                </div>
+              <div class="card-content">
+                <p><span>Weather Dashboard</span></p>
+                <h6>
+                  A quick glance at the current weather and five day
+                  forecast of a desired location.
+                </h6>
+                <div class="content"></div>
+              </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <a href="https://github.com/haleynmyers" target="_blank"
+                    ><i class="fa fa-github"></i> Repository</a
+                  >
+                </p>
+                <p class="card-footer-item">
+                  <a href="https://haleynmyers.github.io/weather-dashboard/" target="_blank"
+                    ><i class="fa fa-external-link" aria-hidden="true"></i>
+                    Website</a
+                  >
+                </p>
+              </footer>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="script.js"></script>
   </body>
 </html>
+
